<resources>
    <string name="app_name">AndroidAA</string>
    <string name="add_team">Add Team</string>
    <string name="list_teams">List Teams</string>
    <string name="list_players">List Players</string>
    <string name="list_games">List Games</string>
    <string name="add_player">add Player</string>
    <string name="add_games">Add Games</string>
    <string name="team_name">Team name</string>
    <string name="team_category">Team Category</string>
    <string name="delete_team">Delete team</string>
    <string name="edit_team">Edit team</string>
    <string name="write_team">You have to write the name of the team!</string>
    <string name="player_name">Player Name</string>
    <string name="last_name_player">Player Last Name </string>
    <string name="phone">Phone</string>
    <string name="write_name_player">You must write the name of the player!!</string>
    <string name="team">Team</string>
    <string name="choose_team">You must select a Team</string>
    <string name="player_added">Player added</string>
    <string name="select_team">Select team</string>
    <string name="category">category</string>
    <string name="name">Name</string>
    <string name="id">id</string>
    <string name="players">Players</string>
    <string name="delete_player">Delete Player</string>
    <string name="edit_player">Edit Player</string>
    <string name="last_name">Last Name</string>
    <string name="list_player">List Player</string>
    <string name="player_details">Player Details</string>
    <string name="team_details">Team Details</string>
    <string name="game_list">Game List</string>
    <string name="player_list">Player list</string>
    <string name="team_list">Team list</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="add_photo">Add Photo</string>
    <string name="squad_number">Squad Number</string>
    <string name="visitor_team">Visitor team</string>
    <string name="local_team">Local team</string>
    <string name="date">Date</string>
    <string name="played">Played</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="date_needed">You must add a date!</string>
    <string name="must_dif_team">Teams can\'t be the same!</string>
    <string name="team_added">Team added!</string>
    <string name="edit_game">Edit Game</string>
    <string name="delete_game">Delete game</string>
    <string name="num_game">Nº game</string>
    <string name="game_details">Game Details</string>
    <string name="add_image">Add image</string>
    <string name="add_location">Add Location</string>
    <string name="google_maps_key">AIzaSyA6WPpNnV_5wHDmLGJ6nYNGMHwSRd313R8</string>
    <string name="see_location">See location</string>
    <string name="game_location_created">Game location created</string>
    <string name="one_marker">Only one marker per game</string>
    <string name="local">\"Local: \"</string>
    <string name="visitor">\" :Visitor \"</string>
    <string name="game_num">\"Game nº \"</string>
    <string name="vs">\" vs \"</string>
    <string name="game_need_location">This game has no location yet.!</string>
    <string name="player_edited">Player Edited</string>
    <string name="Error">Error</string>
    <string name="nameClass">\"Name: \"</string>
    <string name="categoryClass">"Category: "</string>
    <string name="teamClass">Team:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_added">Game added!</string>
    <string name="long_click_lists">Long click on the list for more options!</string>
</resources>