<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/addteambtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_team"/>

        <Button
            android:id="@+id/listTeamsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_teams" />

        <Button
            android:id="@+id/listPlayersbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_players" />

        <Button
            android:id="@+id/listGamesbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_games" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>