<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".AddTeamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btn_listTeamAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.5"
                android:onClick="onClick"
                android:text="@string/list_teams" />

            <Button
                android:id="@+id/btn_addteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.5"
                android:onClick="onClick"
                android:text="@string/add_team" />

            <Button
                android:id="@+id/btn_editteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.5"
                android:onClick="onClick"
                android:text="@string/edit_team" />

        </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= />

        <Button
            android:id=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addteam"
            android:text="@string/add_team" />
        <Button
            android:id=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addteam"
            android:text= />

    </LinearLayout>-->

        <EditText
            android:id="@+id/team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/team_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/team_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/team_category"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>